ScrollRectToVisible should bubble up through its layout container.

Previously, ScrollRectToVisible bubbles up through its dom parent. It works
fine when its layout container is its dom parent, but this is not the case for
absolute-positioned elements. Simply scrolling the dom parent of an
absolute-positioned element wouldn't put the desired rect into view. This patch
changes the behavior by bubbling up through its layout parent.

BUG=645841
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2336013002
Cr-Commit-Position: refs/heads/master@{#419197}

Former-commit-id: 57da1c75484e5a3f0af03d038c43e6f23e1549e8